[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Scenes/Wellcome.gd" type="Script" id=1]

[node name="Wellcome" type="Node2D"]
script = ExtResource( 1 )

[node name="Join" type="Button" parent="."]
margin_left = 292.0
margin_top = 487.0
margin_right = 813.0
margin_bottom = 545.0
text = "Join"

[node name="Create" type="Button" parent="."]
margin_left = 296.0
margin_top = 308.0
margin_right = 817.0
margin_bottom = 366.0
text = "Create"

[node name="IpAddr" type="TextEdit" parent="."]
margin_left = 292.0
margin_top = 390.0
margin_right = 812.0
margin_bottom = 430.0
text = "192.168.209.165"

[node name="IpAddrDisplay" type="RichTextLabel" parent="."]
margin_left = 284.0
margin_top = 54.0
margin_right = 930.0
margin_bottom = 271.0
text = "Dummpy"
fit_content_height = true

[connection signal="button_up" from="Join" to="." method="_on_Join_button_up"]
[connection signal="button_up" from="Create" to="." method="_on_Create_button_up"]
[connection signal="request_completion" from="IpAddr" to="." method="_on_IpAddr_request_completion"]
